<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kszych.testowa.MainActivity">

    <EditText
        android:id="@+id/etOnlyNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:hint="@string/input_numbers_hint"
        android:layout_margin="20dp"
        android:ems="5"
        />

    <TextView
        android:id="@+id/tvOnlyNumbersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etOnlyNumbers"
        android:text="@string/input_numbers_label"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <Button
        android:id="@+id/btGoToSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_second_screen"
        android:layout_below="@id/etOnlyNumbers"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
